[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/World/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/CharacterData/StedeActionData.tres" type="Resource" id=2]
[ext_resource path="res://src/ThemeDefault.tres" type="Theme" id=3]
[ext_resource path="res://data/CharacterData/Stede.tres" type="Resource" id=4]
[ext_resource path="res://src/Team/Team.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/UIPane.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Game.gd" type="Script" id=7]
[ext_resource path="res://src/CombatManager.gd" type="Script" id=10]
[ext_resource path="res://src/ThemeScore.tres" type="Theme" id=11]
[ext_resource path="res://src/UI/ScorePanel.gd" type="Script" id=12]
[ext_resource path="res://src/World/World.gd" type="Script" id=13]
[ext_resource path="res://src/UI/UI.gd" type="Script" id=14]
[ext_resource path="res://assets/art/ui/hand_up.png" type="Texture" id=15]
[ext_resource path="res://src/UI/SelectionIndicator.gd" type="Script" id=16]
[ext_resource path="res://assets/art/flags/320px-Transgender_Pride_flag.svg.png" type="Texture" id=18]
[ext_resource path="res://assets/art/flags/320px-Estelada_roja.svg.png" type="Texture" id=19]
[ext_resource path="res://data/CharacterData/NishinoyaActionData.tres" type="Resource" id=22]
[ext_resource path="res://data/CharacterData/KageyamaActionData.tres" type="Resource" id=23]
[ext_resource path="res://data/CharacterData/Nishinoya.tres" type="Resource" id=24]
[ext_resource path="res://data/CharacterData/Kageyama.tres" type="Resource" id=25]

[node name="Game" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 7 )

[node name="CombatManager" type="Node" parent="."]
script = ExtResource( 10 )

[node name="PlaceholderTimer" type="Timer" parent="CombatManager"]
one_shot = true

[node name="World" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 0 )
script = ExtResource( 13 )

[node name="Teams" type="Node2D" parent="World"]

[node name="Team" parent="World/Teams" groups=["teams"] instance=ExtResource( 5 )]

[node name="Character1" parent="World/Teams/Team" index="1"]
position = Vector2( 70, 422 )
_data = ExtResource( 4 )
_action_data = ExtResource( 2 )

[node name="Character2" parent="World/Teams/Team" index="2"]
position = Vector2( 153, 334 )

[node name="Team2" parent="World/Teams" groups=["teams"] instance=ExtResource( 5 )]
position = Vector2( 200, 0 )
side = -1

[node name="Character0" parent="World/Teams/Team2" index="0"]
position = Vector2( 129, 258 )
_data = ExtResource( 25 )
_action_data = ExtResource( 23 )

[node name="Character1" parent="World/Teams/Team2" index="1"]
position = Vector2( 140, 422 )
is_weapon = true

[node name="Character2" parent="World/Teams/Team2" index="2"]
position = Vector2( 37, 334 )
_data = ExtResource( 24 )
_action_data = ExtResource( 22 )
is_weapon = true

[node name="UI" type="Control" parent="World"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SidePanes" type="Control" parent="World/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPane" parent="World/UI/SidePanes" instance=ExtResource( 6 )]

[node name="RightPane" parent="World/UI/SidePanes" instance=ExtResource( 6 )]
margin_left = 400.0
margin_right = 600.0

[node name="ScorePanels" type="Control" parent="World/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePanelLeft" type="PanelContainer" parent="World/UI/ScorePanels"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 10.0
margin_top = -70.0
margin_right = 170.0
margin_bottom = -4.0
rect_min_size = Vector2( 160, 50 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="World/UI/ScorePanels/ScorePanelLeft"]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 59.0

[node name="Top" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelLeft/VBox"]
margin_right = 146.0
margin_bottom = 24.0

[node name="Team1" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top"]
margin_right = 94.0
margin_bottom = 24.0

[node name="Abbr" type="Label" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top/Team1"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 18.0
rect_min_size = Vector2( 32, 0 )
text = "IND"
valign = 1

[node name="Flag" type="TextureRect" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top/Team1"]
margin_left = 36.0
margin_right = 66.0
margin_bottom = 24.0
grow_vertical = 2
rect_min_size = Vector2( 30, 16 )
size_flags_horizontal = 3
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Serve" type="CheckBox" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top/Team1"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0
button_mask = 0

[node name="SetsWon" type="Panel" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top"]
margin_left = 98.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 18, 0 )

[node name="SetsWonLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top/SetsWon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
size_flags_horizontal = 5
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Panel" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top"]
margin_left = 120.0
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PointsLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Top/Points"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelLeft/VBox"]
margin_top = 28.0
margin_right = 146.0
margin_bottom = 52.0

[node name="Team2" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom"]
margin_right = 94.0
margin_bottom = 24.0

[node name="Abbr" type="Label" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom/Team2"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 18.0
rect_min_size = Vector2( 32, 0 )
text = "TRA"
valign = 1

[node name="Flag" type="TextureRect" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom/Team2"]
margin_left = 36.0
margin_right = 66.0
margin_bottom = 24.0
grow_vertical = 2
rect_min_size = Vector2( 30, 16 )
size_flags_horizontal = 3
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Serve" type="CheckBox" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom/Team2"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0
button_mask = 0

[node name="SetsWon" type="Panel" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom"]
margin_left = 98.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 18, 0 )

[node name="SetsWonLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom/SetsWon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
size_flags_horizontal = 5
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Panel" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom"]
margin_left = 120.0
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PointsLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelLeft/VBox/Bottom/Points"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="World/UI/ScorePanels/ScorePanelLeft"]

[node name="GoToTranspTimer" type="Timer" parent="World/UI/ScorePanels/ScorePanelLeft"]
wait_time = 1.4
one_shot = true

[node name="ScorePanelRight" type="PanelContainer" parent="World/UI/ScorePanels"]
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 230.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 76.0
rect_min_size = Vector2( 160, 50 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="World/UI/ScorePanels/ScorePanelRight"]
margin_left = 7.0
margin_top = 7.0
margin_right = 153.0
margin_bottom = 59.0

[node name="Top" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelRight/VBox"]
margin_right = 146.0
margin_bottom = 24.0

[node name="Team1" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top"]
margin_right = 94.0
margin_bottom = 24.0

[node name="Abbr" type="Label" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top/Team1"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 18.0
rect_min_size = Vector2( 32, 0 )
text = "IND"
valign = 1

[node name="Flag" type="TextureRect" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top/Team1"]
margin_left = 36.0
margin_right = 66.0
margin_bottom = 24.0
grow_vertical = 2
rect_min_size = Vector2( 30, 16 )
size_flags_horizontal = 3
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Serve" type="CheckBox" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top/Team1"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0
button_mask = 0

[node name="SetsWon" type="Panel" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top"]
margin_left = 98.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 18, 0 )

[node name="SetsWonLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top/SetsWon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
size_flags_horizontal = 5
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Panel" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top"]
margin_left = 120.0
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PointsLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Top/Points"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelRight/VBox"]
margin_top = 28.0
margin_right = 146.0
margin_bottom = 52.0

[node name="Team2" type="HBoxContainer" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom"]
margin_right = 94.0
margin_bottom = 24.0

[node name="Abbr" type="Label" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom/Team2"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 18.0
rect_min_size = Vector2( 32, 0 )
text = "TRA"
valign = 1

[node name="Flag" type="TextureRect" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom/Team2"]
margin_left = 36.0
margin_right = 66.0
margin_bottom = 24.0
grow_vertical = 2
rect_min_size = Vector2( 30, 16 )
size_flags_horizontal = 3
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Serve" type="CheckBox" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom/Team2"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0
button_mask = 0

[node name="SetsWon" type="Panel" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom"]
margin_left = 98.0
margin_right = 116.0
margin_bottom = 24.0
rect_min_size = Vector2( 18, 0 )

[node name="SetsWonLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom/SetsWon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
size_flags_horizontal = 5
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Panel" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom"]
margin_left = 120.0
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PointsLabel" type="Label" parent="World/UI/ScorePanels/ScorePanelRight/VBox/Bottom/Points"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="World/UI/ScorePanels/ScorePanelRight"]

[node name="GoToTranspTimer" type="Timer" parent="World/UI/ScorePanels/ScorePanelRight"]
wait_time = 2.0
one_shot = true

[node name="SelectionIndicator" type="TextureRect" parent="World/UI"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 15 )
flip_v = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="World/UI/SelectionIndicator"]

[node name="Tween" type="Tween" parent="World"]

[node name="PlaceholderTimer" type="Timer" parent="."]
one_shot = true

[editable path="World/Teams/Team"]
[editable path="World/Teams/Team2"]
